gcc/testsuite/rust/rustc/ui/issues/issue-22370.rs
trait A<T=Self> {}

fn f(a: &dyn A) {}
// { dg-error ".E0393." "" { target *-*-* } .-1 }

fn main() {}

